JumpScript/tests/baselines/reference/parameterPropertyInConstructor1.errors.txt
tests/cases/compiler/parameterPropertyInConstructor1.jump(3,17): error TS2369: A parameter property is only allowed in a constructor implementation.


==== tests/cases/compiler/parameterPropertyInConstructor1.jump (1 errors) ====
    declare module mod {
      class Customers {
        constructor(public names: string);
                    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2369: A parameter property is only allowed in a constructor implementation.
      }
    }
    